Tessellation example notebook.

--- a/notebooks/community_generation.ipynb
+++ b/notebooks/community_generation.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bfd10aef",
    "metadata": {
     "code_folding": []
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a08768d8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bba998481bfd485ca758c15fc427321f",
+       "model_id": "34aba5436b9c4da0a90099fa8c53893e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -490,7 +490,7 @@
     "        \n",
     "        z = model.encode(data_train.x, data_train.edge_index)\n",
     "\n",
-    "        for i in range(5):\n",
+    "        for i in range(num_repeat_discriminator):\n",
     "            discriminator_optimizer.zero_grad()\n",
     "            discriminator_loss = model.discriminator_loss(z)\n",
     "            discriminator_loss.backward()\n",
