--- a/notebooks/tessellation_example.ipynb
+++ b/notebooks/tessellation_example.ipynb
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "path_masks = f'IBEX_raw_images/'\n",
+    "path_masks = 'IBEX_raw_images/'\n",
     "samples_to_process = ['nLN2', 'nLN1']\n",
     "markers = ['CD68', 'DCSIGN', 'SPARC']\n",
     "base_markers = ['CD68',  'DCSIGN']\n",
