--- a/notebooks/community_generation.ipynb
+++ b/notebooks/community_generation.ipynb
@@ -58,14 +58,14 @@
     }
    },
    "source": [
-    "| index| sample_id | center_x | center_y|cell_type |\n",
-    "| --- | --- | --- | --- | --- |\n",
-    "| 1 | HP9849 | 1200 | 2300 | B-cells |\n",
-    "| 2 | HP9849 | 1212 | 2567 | B-cells |\n",
-    "| 3 | HP9849 | 1232 | 3411 | T-helpers |\n",
+    " index| sample_id | center_x | center_y | cell_type \n",
+    " --- | --- | --- | --- | --- \n",
+    " 1 | HP9849 | 1200 | 2300 | B-cells \n",
+    " 2 | HP9849 | 1212 | 2567 | B-cells \n",
+    " 3 | HP9849 | 1232 | 3411 | T-helpers \n",
     "| ... |\n",
-    "| 3450022 | HP9976 | 3476 | 1012 | Macrophages |\n",
-    "| 3450023 | HP9976 | 3490 | 2489 | B-cells |\n"
+    " 3450022 | HP9976 | 3476 | 1012 | Macrophages \n",
+    " 3450023 | HP9976 | 3490 | 2489 | B-cells \n"
    ]
   },
   {
