--- a/notebooks/community_generation.ipynb
+++ b/notebooks/community_generation.ipynb
@@ -26,7 +26,8 @@
     "from torch_geometric.data import Data, DataLoader\n",
     "from torch_geometric.nn import ARGVA, GCNConv\n",
     "from tqdm.notebook import tqdm\n",
-    "from skimage.io import imread"
+    "from skimage.io import imread\n",
+    "from skimage.filters import threshold_otsu"
    ]
   },
   {
